tests/snapshots/compiler_error_fixtures/invalid_main_return_type.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/invalid_main_return_type.flx
== compile ==
failed (compile)
== diagnostics ==
error[E412]: Invalid Main Return Type

`fn main` must return `Unit` (or omit return type).

  examples/compiler_errors/invalid_main_return_type.flx:4:14
  |
4 | fn main() -> Int {
  |              ^^^
  |              --- invalid `main` return type

Hint:
  Change signature to `fn main() { ... }` or `-> Unit`.
== stdout ==
<not executed>
